Spring Boot와 JPA를 사용하여 간단한 쇼핑몰 만들기 Ver1.2
[ 프로젝트 정보 ]
- 목록 및 상세페이지 이미지 보이도록 설정
- AWS로 설정되어있던 이미지 삽입 프로젝트 내 files 폴더로 경로 설정 및 등록 수정
- 페이징 되어있는 목록 화면으로 초기 PATH 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=shop
 server.port = 8081
 
-spring.datasource.url=
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=
-spring.datasource.password=
+#spring.datasource.url=
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=
+#spring.datasource.password=
+
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
